//
// Created by cdorman on 10/23/2025.
//

#ifndef CPP_PROJECTS_CANVASMANAGER_H
#define CPP_PROJECTS_CANVASMANAGER_H


class CanvasManager {
};


#endif //CPP_PROJECTS_CANVASMANAGER_H