//
// Created by coled on 10/21/2025.
//

#ifndef CPP_PROJECTS_GAMEMANAGER_H
#define CPP_PROJECTS_GAMEMANAGER_H


class GameManager {
};


#endif //CPP_PROJECTS_GAMEMANAGER_H
