#ifndef CPP_PROJECTS_COOLANT_H
#define CPP_PROJECTS_COOLANT_H


class Coolant {
public:
};


#endif //CPP_PROJECTS_COOLANT_H
